<resources>
    <string name="app_name">AljoodAdmin</string>
    <string name="name">أسم المركز</string>
    <string name="password">"كلمة مرور "</string>
    <string name="email">ايميل</string>
    <string name="add_user">"اضافة مركز "</string>
    <string name="account">الحساب</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_device">اسم جهاز</string>
    <string name="add_device">اضافة جهاز</string>
    <string name="discroption">الوصف</string>
    <string name="add_playground_images">اضافة صور</string>
    <string name="catygory">الفئات</string>
    <string name="add_lenses">اضافة عدسة</string>
    <string name="search">بحث</string>

    <string name="duration">المدة</string>
    <string name="medical">طبي</string>
    <string name="cosmetic">تجميلي</string>
    <string name="monthly">شهري</string>
    <string name="yearly">سنوي</string>
    <string name="contact">مراسلة</string>
    <string name="points">النقاط</string>
</resources>