<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"

    tools:context=".view.AddUser">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_condition"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/add_user"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/add_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="32dp"

        android:layout_marginRight="82dp"
        android:text="التسجيل"
        android:textColor="@color/white"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_edit_text"
        android:drawableRight="@drawable/ic_baseline_work_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"

        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_condition" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_edit_text"
        android:drawableRight="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/password"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextEmailAddress"
        app:layout_constraintRight_toRightOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />


    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_edit_text"
        android:drawableRight="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:ems="10"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/name"

        app:layout_constraintRight_toRightOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/account_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_edit_text"
        android:drawableRight="@drawable/ic_baseline_monetization_on_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/account"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintRight_toRightOf="@+id/password_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/points_edit"
        app:layout_constraintTop_toBottomOf="@+id/password_edit" />

    <EditText
        android:id="@+id/points_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_edit_text"
        android:drawableRight="@drawable/point_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/points"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintRight_toLeftOf="@+id/account_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/password_edit"

        app:layout_constraintTop_toBottomOf="@+id/password_edit" />
    <!--
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginRight="36dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_image_btn" />

        <EditText
                android:id="@+id/wahtsup_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:inputType="number"
                android:maxLines="1"
                android:padding="4dp"
android:visibility="gone"
                app:layout_constraintRight_toRightOf="@+id/password_edit"
                app:layout_constraintLeft_toLeftOf="@+id/password_edit"
                />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/whatsup"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone"

                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="456dp" />
-->


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
