<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"

    tools:context=".view.AddDevice">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_condition"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/add_device"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_condition">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout_"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_edit_text"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/name_device"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/discroption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_edit_text"
        android:drawablePadding="8dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/discroption"

        android:maxLines="6"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintRight_toRightOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/isAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="@dimen/txt_subheading"

        android:text="متوفر"
        app:layout_constraintEnd_toStartOf="@+id/isPromotion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discroption" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/isPromotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="@dimen/txt_subheading"
        android:text="عرض"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/isAvailable"
        app:layout_constraintTop_toBottomOf="@+id/discroption" />
    <LinearLayout
        android:id="@+id/ln_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_5"
        android:background="@drawable/layout_border_full_grey"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_5"
        android:paddingEnd="@dimen/padding_15"
        android:paddingStart="@dimen/padding_15"
        android:paddingTop="@dimen/padding_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isAvailable">

        <ImageButton
            android:layout_width="@dimen/icon_size_medium"
            android:layout_height="@dimen/icon_size_medium"
            android:background="@null"
            android:clickable="false"
            android:padding="@dimen/padding_3"
            android:scaleType="fitCenter"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <TextView
            android:id="@+id/txt_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5"
            android:text="@string/add_playground_images"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_subheading" />


    </LinearLayout>



            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_images"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:outlineSpotShadowColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ln_images" />

            <com.rd.PageIndicatorView
        android:id="@+id/mPageIndicatorView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin_5"
        app:layout_constraintBottom_toBottomOf="@+id/vp_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:piv_animationType="worm"
        app:piv_interactiveAnimation="true"
        app:piv_padding="5dp"
        app:piv_radius="5dp"
        app:piv_selectedColor="@color/colorAccent"
        app:piv_unselectedColor="@color/semi_gray"
        app:piv_viewPager="@id/vp_images" />
            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/name" />
    <Button
        android:id="@+id/add_device"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="82dp"

        android:layout_marginRight="82dp"
        android:text="اضافة"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mPageIndicatorView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>